# ArtGallery---GraphicsAndVirtualReality2024

./: .gitattributes  .gitignore  README.md
src/: CMakeLists.txt
src/common/: camera.cpp  camera.h  light.cpp  light.h  model.cpp  model.h  postProcessing.cpp  postProcessing.h  texture.cpp  uniform.cpp  uniform.h
src/lab06/: Depth.fragmentshader  Depth.vertexshader  DestroyedRoom.fragmentshader  GreatDrawingRoom.vertexshader  Lightsphere.fragmentshader  Lightsphere.vertexshader  MetallicCave.fragmentshader  MetallicCave.vertexshader  MorningRoom.fragmentshader  MorningRoom.vertexshader  PeireneFountain.fragmentshader  PeireneFountain.vertexshader  Portal.fragmentshader  Portal.vertexshader  ShadowMapping.fragmentshader  ShadowMapping.vertexshader  SimpleTexture.fragmentshader  SimpleTexture.vertexshader  Transition.fragmentshader  Transition.vertexshader  lab.cpp
